# smbus-request-parser-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
smbus-request-parser/: Cargo.toml  README.md
smbus-request-parser/src/: lib.rs  test.rs  tests.rs
src/: lib.rs  tests.rs
stm32f0-smbus-module/: Cargo.toml  Embed.toml  README.md  memory.x  test_i2c.py
stm32f0-smbus-module/.cargo/: config
stm32f0-smbus-module/src/: main.rs  smbus.rs
