[package]
name = "smbus-request-parser"
version = "0.1.1"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "Parse SMBus requests. Register functions to call for each type of write/read request. Agnostic regarding polling, irq, dma usage."
readme = "README.md"
license = "MIT License"
repository = "https://github.com/barafael/smbus-request-parser"
edition = "2018"
keywords = ["smbus", "i2c"]
categories = ["embedded"]
