[package]
name = "stm32f0-smbus-module"
version = "0.2.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "This firmware for stm32f0 implements an SMBus module to test smbus-request-parser library. RTIC is used to manage the interrupts. The I2C1 peripheral is used, with SCL, SDA mapped to PB8, PB9."
readme = "README.md"
license = "MIT License"
repository = "https://github.com/barafael/stm32f0-smbus-module"
edition = "2018"

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"

[dependencies]
embedded-hal = "0.2.4"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
cortex-m = "0.7.2"
cortex-m-rtic = "0.5.6"
stm32f0xx-hal = { version = "0.17.1", features = ["rt", "stm32f072"] }
smbus-request-parser = { path = "../smbus-request-parser" }

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f0-smbus-module"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
