[package]
name = "stm32f0-smbus-module"
version = "0.2.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "This firmware for stm32f0 implements an SMBus module to test smbus-request-parser library. RTIC is used to manage the interrupts. The I2C1 peripheral is used, with SCL, SDA mapped to PB8, PB9."
readme = "README.md"
license = "MIT License"
repository = "https://github.com/barafael/stm32f0-smbus-module"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rtic = "1.1.2"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
smbus-request-parser = { path = "../smbus-request-parser" }
stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32f072"] }

# this lets you use `cargo fix`!
[[bin]]
bench = false
name = "stm32f0-smbus-module"
test = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
